project3/subc.output
Terminals unused in grammar

   ASSIGNOP
   '/'
   '%'
   UNARY_OP
   NULL_TOKEN


State 24 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ext_def_list

    2 ext_def_list: ext_def_list ext_def
    3             | %empty

    4 ext_def: type_specifier pointers ID ';'
    5        | type_specifier pointers ID '[' const_expr ']' ';'
    6        | func_decl ';'
    7        | type_specifier ';'
    8        | func_decl compound_stmt

    9 type_specifier: TYPE
   10               | VOID
   11               | struct_specifier

   12 $@1: %empty

   13 struct_specifier: STRUCT ID '{' $@1 def_list '}'
   14                 | STRUCT ID

   15 func_decl: type_specifier pointers ID '(' ')'
   16          | type_specifier pointers ID '(' VOID ')'

   17 @2: %empty

   18 func_decl: type_specifier pointers ID '(' @2 param_list ')'

   19 pointers: '*'
   20         | %empty

   21 param_list: param_decl
   22           | param_list ',' param_decl

   23 param_decl: type_specifier pointers ID
   24           | type_specifier pointers ID '[' const_expr ']'

   25 def_list: def_list def
   26         | %empty

   27 def: type_specifier pointers ID ';'
   28    | type_specifier pointers ID '[' const_expr ']' ';'
   29    | type_specifier ';'
   30    | func_decl ';'

   31 compound_stmt: '{' local_defs stmt_list '}'

   32 local_defs: def_list

   33 stmt_list: stmt_list stmt
   34          | %empty

   35 stmt: expr ';'
   36     | compound_stmt
   37     | RETURN ';'
   38     | RETURN expr ';'
   39     | ';'
   40     | IF '(' expr ')' stmt
   41     | IF '(' expr ')' stmt ELSE stmt
   42     | WHILE '(' expr ')' stmt
   43     | FOR '(' expr_e ';' expr_e ';' expr_e ')' stmt
   44     | BREAK ';'
   45     | CONTINUE ';'

   46 expr_e: expr
   47       | %empty

   48 const_expr: expr

   49 expr: unary '=' expr
   50     | or_expr

   51 or_expr: or_list

   52 or_list: or_list LOGICAL_OR and_expr
   53        | and_expr

   54 and_expr: and_list

   55 and_list: and_list LOGICAL_AND binary
   56         | binary

   57 binary: binary RELOP binary
   58       | binary EQUOP binary
   59       | binary '+' binary
   60       | binary '-' binary
   61       | unary

   62 unary: '(' expr ')'
   63      | '(' unary ')'
   64      | INTEGER_CONST
   65      | CHAR_CONST
   66      | STRING
   67      | ID
   68      | '-' unary
   69      | '!' unary
   70      | unary INCOP
   71      | unary DECOP
   72      | INCOP unary
   73      | DECOP unary
   74      | '&' unary
   75      | '*' unary
   76      | unary '[' expr ']'
   77      | unary '.' ID
   78      | unary STRUCTOP ID
   79      | unary '(' args ')'
   80      | unary '(' ')'

   81 args: expr
   82     | args ',' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 69
'%' (37)
'&' (38) 74
'(' (40) 15 16 18 40 41 42 43 62 63 79 80
')' (41) 15 16 18 40 41 42 43 62 63 79 80
'*' (42) 19 75
'+' (43) 59
',' (44) 22 82
'-' (45) 60 68
'.' (46) 77
'/' (47)
';' (59) 4 5 6 7 27 28 29 30 35 37 38 39 43 44 45
'=' (61) 49
'[' (91) 5 24 28 76
']' (93) 5 24 28 76
'{' (123) 13 31
'}' (125) 13 31
error (256)
ASSIGNOP (258)
LOGICAL_OR (259) 52
LOGICAL_AND (260) 55
EQUOP (261) 58
RELOP (262) 57
INCOP (263) 70 72
DECOP (264) 71 73
UNARY_OP (265)
STRUCTOP (266) 78
TYPE (267) 9
VOID (268) 10 16
NULL_TOKEN (269)
STRUCT (270) 13 14
RETURN (271) 37 38
IF (272) 40 41
ELSE (273) 41
WHILE (274) 42
FOR (275) 43
BREAK (276) 44
CONTINUE (277) 45
ID (278) 4 5 13 14 15 16 18 23 24 27 28 67 77 78
INTEGER_CONST (279) 64
CHAR_CONST (280) 65
STRING (281) 66


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
ext_def_list (46)
    on left: 2 3, on right: 1 2
ext_def (47)
    on left: 4 5 6 7 8, on right: 2
type_specifier (48)
    on left: 9 10 11, on right: 4 5 7 15 16 18 23 24 27 28 29
struct_specifier (49)
    on left: 13 14, on right: 11
$@1 (50)
    on left: 12, on right: 13
func_decl (51)
    on left: 15 16 18, on right: 6 8 30
@2 (52)
    on left: 17, on right: 18
pointers (53)
    on left: 19 20, on right: 4 5 15 16 18 23 24 27 28
param_list (54)
    on left: 21 22, on right: 18 22
param_decl (55)
    on left: 23 24, on right: 21 22
def_list (56)
    on left: 25 26, on right: 13 25 32
def (57)
    on left: 27 28 29 30, on right: 25
compound_stmt (58)
    on left: 31, on right: 8 36
local_defs (59)
    on left: 32, on right: 31
stmt_list (60)
    on left: 33 34, on right: 31 33
stmt (61)
    on left: 35 36 37 38 39 40 41 42 43 44 45, on right: 33 40 41 42
    43
expr_e (62)
    on left: 46 47, on right: 43
const_expr (63)
    on left: 48, on right: 5 24 28
expr (64)
    on left: 49 50, on right: 35 38 40 41 42 46 48 49 62 76 81 82
or_expr (65)
    on left: 51, on right: 50
or_list (66)
    on left: 52 53, on right: 51 52
and_expr (67)
    on left: 54, on right: 52 53
and_list (68)
    on left: 55 56, on right: 54 55
binary (69)
    on left: 57 58 59 60 61, on right: 55 56 57 58 59 60
unary (70)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80, on right: 49 61 63 68 69 70 71 72 73 74 75 76 77 78 79 80
args (71)
    on left: 81 82, on right: 79 82


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (ext_def_list)

    program       go to state 1
    ext_def_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: ext_def_list .
    2 ext_def_list: ext_def_list . ext_def

    TYPE    shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    $default  reduce using rule 1 (program)

    ext_def           go to state 7
    type_specifier    go to state 8
    struct_specifier  go to state 9
    func_decl         go to state 10


State 3

    0 $accept: program $end .

    $default  accept


State 4

    9 type_specifier: TYPE .

    $default  reduce using rule 9 (type_specifier)


State 5

   10 type_specifier: VOID .

    $default  reduce using rule 10 (type_specifier)


State 6

   13 struct_specifier: STRUCT . ID '{' $@1 def_list '}'
   14                 | STRUCT . ID

    ID  shift, and go to state 11


State 7

    2 ext_def_list: ext_def_list ext_def .

    $default  reduce using rule 2 (ext_def_list)


State 8

    4 ext_def: type_specifier . pointers ID ';'
    5        | type_specifier . pointers ID '[' const_expr ']' ';'
    7        | type_specifier . ';'
   15 func_decl: type_specifier . pointers ID '(' ')'
   16          | type_specifier . pointers ID '(' VOID ')'
   18          | type_specifier . pointers ID '(' @2 param_list ')'

    '*'  shift, and go to state 12
    ';'  shift, and go to state 13

    $default  reduce using rule 20 (pointers)

    pointers  go to state 14


State 9

   11 type_specifier: struct_specifier .

    $default  reduce using rule 11 (type_specifier)


State 10

    6 ext_def: func_decl . ';'
    8        | func_decl . compound_stmt

    ';'  shift, and go to state 15
    '{'  shift, and go to state 16

    compound_stmt  go to state 17


State 11

   13 struct_specifier: STRUCT ID . '{' $@1 def_list '}'
   14                 | STRUCT ID .

    '{'  shift, and go to state 18

    $default  reduce using rule 14 (struct_specifier)


State 12

   19 pointers: '*' .

    $default  reduce using rule 19 (pointers)


State 13

    7 ext_def: type_specifier ';' .

    $default  reduce using rule 7 (ext_def)


State 14

    4 ext_def: type_specifier pointers . ID ';'
    5        | type_specifier pointers . ID '[' const_expr ']' ';'
   15 func_decl: type_specifier pointers . ID '(' ')'
   16          | type_specifier pointers . ID '(' VOID ')'
   18          | type_specifier pointers . ID '(' @2 param_list ')'

    ID  shift, and go to state 19


State 15

    6 ext_def: func_decl ';' .

    $default  reduce using rule 6 (ext_def)


State 16

   31 compound_stmt: '{' . local_defs stmt_list '}'

    $default  reduce using rule 26 (def_list)

    def_list    go to state 20
    local_defs  go to state 21


State 17

    8 ext_def: func_decl compound_stmt .

    $default  reduce using rule 8 (ext_def)


State 18

   13 struct_specifier: STRUCT ID '{' . $@1 def_list '}'

    $default  reduce using rule 12 ($@1)

    $@1  go to state 22


State 19

    4 ext_def: type_specifier pointers ID . ';'
    5        | type_specifier pointers ID . '[' const_expr ']' ';'
   15 func_decl: type_specifier pointers ID . '(' ')'
   16          | type_specifier pointers ID . '(' VOID ')'
   18          | type_specifier pointers ID . '(' @2 param_list ')'

    '['  shift, and go to state 23
    '('  shift, and go to state 24
    ';'  shift, and go to state 25


State 20

   25 def_list: def_list . def
   32 local_defs: def_list .

    TYPE    shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    $default  reduce using rule 32 (local_defs)

    type_specifier    go to state 26
    struct_specifier  go to state 9
    func_decl         go to state 27
    def               go to state 28


State 21

   31 compound_stmt: '{' local_defs . stmt_list '}'

    $default  reduce using rule 34 (stmt_list)

    stmt_list  go to state 29


State 22

   13 struct_specifier: STRUCT ID '{' $@1 . def_list '}'

    $default  reduce using rule 26 (def_list)

    def_list  go to state 30


State 23

    5 ext_def: type_specifier pointers ID '[' . const_expr ']' ';'

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    const_expr  go to state 42
    expr        go to state 43
    or_expr     go to state 44
    or_list     go to state 45
    and_expr    go to state 46
    and_list    go to state 47
    binary      go to state 48
    unary       go to state 49


State 24

   15 func_decl: type_specifier pointers ID '(' . ')'
   16          | type_specifier pointers ID '(' . VOID ')'
   18          | type_specifier pointers ID '(' . @2 param_list ')'

    ')'   shift, and go to state 50
    VOID  shift, and go to state 51

    VOID      [reduce using rule 17 (@2)]
    $default  reduce using rule 17 (@2)

    @2  go to state 52


State 25

    4 ext_def: type_specifier pointers ID ';' .

    $default  reduce using rule 4 (ext_def)


State 26

   15 func_decl: type_specifier . pointers ID '(' ')'
   16          | type_specifier . pointers ID '(' VOID ')'
   18          | type_specifier . pointers ID '(' @2 param_list ')'
   27 def: type_specifier . pointers ID ';'
   28    | type_specifier . pointers ID '[' const_expr ']' ';'
   29    | type_specifier . ';'

    '*'  shift, and go to state 12
    ';'  shift, and go to state 53

    $default  reduce using rule 20 (pointers)

    pointers  go to state 54


State 27

   30 def: func_decl . ';'

    ';'  shift, and go to state 55


State 28

   25 def_list: def_list def .

    $default  reduce using rule 25 (def_list)


State 29

   31 compound_stmt: '{' local_defs stmt_list . '}'
   33 stmt_list: stmt_list . stmt

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    RETURN         shift, and go to state 56
    IF             shift, and go to state 57
    WHILE          shift, and go to state 58
    FOR            shift, and go to state 59
    BREAK          shift, and go to state 60
    CONTINUE       shift, and go to state 61
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41
    ';'            shift, and go to state 62
    '{'            shift, and go to state 16
    '}'            shift, and go to state 63

    compound_stmt  go to state 64
    stmt           go to state 65
    expr           go to state 66
    or_expr        go to state 44
    or_list        go to state 45
    and_expr       go to state 46
    and_list       go to state 47
    binary         go to state 48
    unary          go to state 49


State 30

   13 struct_specifier: STRUCT ID '{' $@1 def_list . '}'
   25 def_list: def_list . def

    TYPE    shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6
    '}'     shift, and go to state 67

    type_specifier    go to state 26
    struct_specifier  go to state 9
    func_decl         go to state 27
    def               go to state 28


State 31

   74 unary: '&' . unary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    unary  go to state 68


State 32

   68 unary: '-' . unary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    unary  go to state 69


State 33

   75 unary: '*' . unary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    unary  go to state 70


State 34

   69 unary: '!' . unary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    unary  go to state 71


State 35

   72 unary: INCOP . unary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    unary  go to state 72


State 36

   73 unary: DECOP . unary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    unary  go to state 73


State 37

   62 unary: '(' . expr ')'
   63      | '(' . unary ')'

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    expr      go to state 74
    or_expr   go to state 44
    or_list   go to state 45
    and_expr  go to state 46
    and_list  go to state 47
    binary    go to state 48
    unary     go to state 75


State 38

   67 unary: ID .

    $default  reduce using rule 67 (unary)


State 39

   64 unary: INTEGER_CONST .

    $default  reduce using rule 64 (unary)


State 40

   65 unary: CHAR_CONST .

    $default  reduce using rule 65 (unary)


State 41

   66 unary: STRING .

    $default  reduce using rule 66 (unary)


State 42

    5 ext_def: type_specifier pointers ID '[' const_expr . ']' ';'

    ']'  shift, and go to state 76


State 43

   48 const_expr: expr .

    $default  reduce using rule 48 (const_expr)


State 44

   50 expr: or_expr .

    $default  reduce using rule 50 (expr)


State 45

   51 or_expr: or_list .
   52 or_list: or_list . LOGICAL_OR and_expr

    LOGICAL_OR  shift, and go to state 77

    $default  reduce using rule 51 (or_expr)


State 46

   53 or_list: and_expr .

    $default  reduce using rule 53 (or_list)


State 47

   54 and_expr: and_list .
   55 and_list: and_list . LOGICAL_AND binary

    LOGICAL_AND  shift, and go to state 78

    $default  reduce using rule 54 (and_expr)


State 48

   56 and_list: binary .
   57 binary: binary . RELOP binary
   58       | binary . EQUOP binary
   59       | binary . '+' binary
   60       | binary . '-' binary

    EQUOP  shift, and go to state 79
    RELOP  shift, and go to state 80
    '+'    shift, and go to state 81
    '-'    shift, and go to state 82

    $default  reduce using rule 56 (and_list)


State 49

   49 expr: unary . '=' expr
   61 binary: unary .
   70 unary: unary . INCOP
   71      | unary . DECOP
   76      | unary . '[' expr ']'
   77      | unary . '.' ID
   78      | unary . STRUCTOP ID
   79      | unary . '(' args ')'
   80      | unary . '(' ')'

    '='       shift, and go to state 83
    INCOP     shift, and go to state 84
    DECOP     shift, and go to state 85
    STRUCTOP  shift, and go to state 86
    '['       shift, and go to state 87
    '('       shift, and go to state 88
    '.'       shift, and go to state 89

    $default  reduce using rule 61 (binary)


State 50

   15 func_decl: type_specifier pointers ID '(' ')' .

    $default  reduce using rule 15 (func_decl)


State 51

   16 func_decl: type_specifier pointers ID '(' VOID . ')'

    ')'  shift, and go to state 90


State 52

   18 func_decl: type_specifier pointers ID '(' @2 . param_list ')'

    TYPE    shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    type_specifier    go to state 91
    struct_specifier  go to state 9
    param_list        go to state 92
    param_decl        go to state 93


State 53

   29 def: type_specifier ';' .

    $default  reduce using rule 29 (def)


State 54

   15 func_decl: type_specifier pointers . ID '(' ')'
   16          | type_specifier pointers . ID '(' VOID ')'
   18          | type_specifier pointers . ID '(' @2 param_list ')'
   27 def: type_specifier pointers . ID ';'
   28    | type_specifier pointers . ID '[' const_expr ']' ';'

    ID  shift, and go to state 94


State 55

   30 def: func_decl ';' .

    $default  reduce using rule 30 (def)


State 56

   37 stmt: RETURN . ';'
   38     | RETURN . expr ';'

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41
    ';'            shift, and go to state 95

    expr      go to state 96
    or_expr   go to state 44
    or_list   go to state 45
    and_expr  go to state 46
    and_list  go to state 47
    binary    go to state 48
    unary     go to state 49


State 57

   40 stmt: IF . '(' expr ')' stmt
   41     | IF . '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 97


State 58

   42 stmt: WHILE . '(' expr ')' stmt

    '('  shift, and go to state 98


State 59

   43 stmt: FOR . '(' expr_e ';' expr_e ';' expr_e ')' stmt

    '('  shift, and go to state 99


State 60

   44 stmt: BREAK . ';'

    ';'  shift, and go to state 100


State 61

   45 stmt: CONTINUE . ';'

    ';'  shift, and go to state 101


State 62

   39 stmt: ';' .

    $default  reduce using rule 39 (stmt)


State 63

   31 compound_stmt: '{' local_defs stmt_list '}' .

    $default  reduce using rule 31 (compound_stmt)


State 64

   36 stmt: compound_stmt .

    $default  reduce using rule 36 (stmt)


State 65

   33 stmt_list: stmt_list stmt .

    $default  reduce using rule 33 (stmt_list)


State 66

   35 stmt: expr . ';'

    ';'  shift, and go to state 102


State 67

   13 struct_specifier: STRUCT ID '{' $@1 def_list '}' .

    $default  reduce using rule 13 (struct_specifier)


State 68

   70 unary: unary . INCOP
   71      | unary . DECOP
   74      | '&' unary .
   76      | unary . '[' expr ']'
   77      | unary . '.' ID
   78      | unary . STRUCTOP ID
   79      | unary . '(' args ')'
   80      | unary . '(' ')'

    INCOP     shift, and go to state 84
    DECOP     shift, and go to state 85
    STRUCTOP  shift, and go to state 86
    '['       shift, and go to state 87
    '('       shift, and go to state 88
    '.'       shift, and go to state 89

    $default  reduce using rule 74 (unary)


State 69

   68 unary: '-' unary .
   70      | unary . INCOP
   71      | unary . DECOP
   76      | unary . '[' expr ']'
   77      | unary . '.' ID
   78      | unary . STRUCTOP ID
   79      | unary . '(' args ')'
   80      | unary . '(' ')'

    INCOP     shift, and go to state 84
    DECOP     shift, and go to state 85
    STRUCTOP  shift, and go to state 86
    '['       shift, and go to state 87
    '('       shift, and go to state 88
    '.'       shift, and go to state 89

    $default  reduce using rule 68 (unary)


State 70

   70 unary: unary . INCOP
   71      | unary . DECOP
   75      | '*' unary .
   76      | unary . '[' expr ']'
   77      | unary . '.' ID
   78      | unary . STRUCTOP ID
   79      | unary . '(' args ')'
   80      | unary . '(' ')'

    INCOP     shift, and go to state 84
    DECOP     shift, and go to state 85
    STRUCTOP  shift, and go to state 86
    '['       shift, and go to state 87
    '('       shift, and go to state 88
    '.'       shift, and go to state 89

    $default  reduce using rule 75 (unary)


State 71

   69 unary: '!' unary .
   70      | unary . INCOP
   71      | unary . DECOP
   76      | unary . '[' expr ']'
   77      | unary . '.' ID
   78      | unary . STRUCTOP ID
   79      | unary . '(' args ')'
   80      | unary . '(' ')'

    INCOP     shift, and go to state 84
    DECOP     shift, and go to state 85
    STRUCTOP  shift, and go to state 86
    '['       shift, and go to state 87
    '('       shift, and go to state 88
    '.'       shift, and go to state 89

    $default  reduce using rule 69 (unary)


State 72

   70 unary: unary . INCOP
   71      | unary . DECOP
   72      | INCOP unary .
   76      | unary . '[' expr ']'
   77      | unary . '.' ID
   78      | unary . STRUCTOP ID
   79      | unary . '(' args ')'
   80      | unary . '(' ')'

    INCOP     shift, and go to state 84
    DECOP     shift, and go to state 85
    STRUCTOP  shift, and go to state 86
    '['       shift, and go to state 87
    '('       shift, and go to state 88
    '.'       shift, and go to state 89

    $default  reduce using rule 72 (unary)


State 73

   70 unary: unary . INCOP
   71      | unary . DECOP
   73      | DECOP unary .
   76      | unary . '[' expr ']'
   77      | unary . '.' ID
   78      | unary . STRUCTOP ID
   79      | unary . '(' args ')'
   80      | unary . '(' ')'

    INCOP     shift, and go to state 84
    DECOP     shift, and go to state 85
    STRUCTOP  shift, and go to state 86
    '['       shift, and go to state 87
    '('       shift, and go to state 88
    '.'       shift, and go to state 89

    $default  reduce using rule 73 (unary)


State 74

   62 unary: '(' expr . ')'

    ')'  shift, and go to state 103


State 75

   49 expr: unary . '=' expr
   61 binary: unary .
   63 unary: '(' unary . ')'
   70      | unary . INCOP
   71      | unary . DECOP
   76      | unary . '[' expr ']'
   77      | unary . '.' ID
   78      | unary . STRUCTOP ID
   79      | unary . '(' args ')'
   80      | unary . '(' ')'

    '='       shift, and go to state 83
    INCOP     shift, and go to state 84
    DECOP     shift, and go to state 85
    STRUCTOP  shift, and go to state 86
    '['       shift, and go to state 87
    '('       shift, and go to state 88
    ')'       shift, and go to state 104
    '.'       shift, and go to state 89

    $default  reduce using rule 61 (binary)


State 76

    5 ext_def: type_specifier pointers ID '[' const_expr ']' . ';'

    ';'  shift, and go to state 105


State 77

   52 or_list: or_list LOGICAL_OR . and_expr

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    and_expr  go to state 106
    and_list  go to state 47
    binary    go to state 48
    unary     go to state 107


State 78

   55 and_list: and_list LOGICAL_AND . binary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    binary  go to state 108
    unary   go to state 107


State 79

   58 binary: binary EQUOP . binary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    binary  go to state 109
    unary   go to state 107


State 80

   57 binary: binary RELOP . binary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    binary  go to state 110
    unary   go to state 107


State 81

   59 binary: binary '+' . binary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    binary  go to state 111
    unary   go to state 107


State 82

   60 binary: binary '-' . binary

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    binary  go to state 112
    unary   go to state 107


State 83

   49 expr: unary '=' . expr

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    expr      go to state 113
    or_expr   go to state 44
    or_list   go to state 45
    and_expr  go to state 46
    and_list  go to state 47
    binary    go to state 48
    unary     go to state 49


State 84

   70 unary: unary INCOP .

    $default  reduce using rule 70 (unary)


State 85

   71 unary: unary DECOP .

    $default  reduce using rule 71 (unary)


State 86

   78 unary: unary STRUCTOP . ID

    ID  shift, and go to state 114


State 87

   76 unary: unary '[' . expr ']'

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    expr      go to state 115
    or_expr   go to state 44
    or_list   go to state 45
    and_expr  go to state 46
    and_list  go to state 47
    binary    go to state 48
    unary     go to state 49


State 88

   79 unary: unary '(' . args ')'
   80      | unary '(' . ')'

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ')'            shift, and go to state 116
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    expr      go to state 117
    or_expr   go to state 44
    or_list   go to state 45
    and_expr  go to state 46
    and_list  go to state 47
    binary    go to state 48
    unary     go to state 49
    args      go to state 118


State 89

   77 unary: unary '.' . ID

    ID  shift, and go to state 119


State 90

   16 func_decl: type_specifier pointers ID '(' VOID ')' .

    $default  reduce using rule 16 (func_decl)


State 91

   23 param_decl: type_specifier . pointers ID
   24           | type_specifier . pointers ID '[' const_expr ']'

    '*'  shift, and go to state 12

    $default  reduce using rule 20 (pointers)

    pointers  go to state 120


State 92

   18 func_decl: type_specifier pointers ID '(' @2 param_list . ')'
   22 param_list: param_list . ',' param_decl

    ','  shift, and go to state 121
    ')'  shift, and go to state 122


State 93

   21 param_list: param_decl .

    $default  reduce using rule 21 (param_list)


State 94

   15 func_decl: type_specifier pointers ID . '(' ')'
   16          | type_specifier pointers ID . '(' VOID ')'
   18          | type_specifier pointers ID . '(' @2 param_list ')'
   27 def: type_specifier pointers ID . ';'
   28    | type_specifier pointers ID . '[' const_expr ']' ';'

    '['  shift, and go to state 123
    '('  shift, and go to state 24
    ';'  shift, and go to state 124


State 95

   37 stmt: RETURN ';' .

    $default  reduce using rule 37 (stmt)


State 96

   38 stmt: RETURN expr . ';'

    ';'  shift, and go to state 125


State 97

   40 stmt: IF '(' . expr ')' stmt
   41     | IF '(' . expr ')' stmt ELSE stmt

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    expr      go to state 126
    or_expr   go to state 44
    or_list   go to state 45
    and_expr  go to state 46
    and_list  go to state 47
    binary    go to state 48
    unary     go to state 49


State 98

   42 stmt: WHILE '(' . expr ')' stmt

    '&'            shift, and go to state 31
    '-'            shift, and go to state 32
    '*'            shift, and go to state 33
    '!'            shift, and go to state 34
    INCOP          shift, and go to state 35
    DECOP          shift, and go to state 36
    '('            shift, and go to state 37
    ID             shift, and go to state 38
    INTEGER_CONST  shift, and go to state 39
    CHAR_CONST     shift, and go to state 40
    STRING         shift, and go to state 41

    expr      go to state 127
    or_expr   go to state 44
    or_list   go to state 45
    and_expr  go to state 46
    and_list  go to state 47
    binary    go to state 48
    unary     go to state 49


State 99

   43 stmt: FOR '(' . expr_e ';' expr_e ';' expr_e ')' stmt
